[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "samples-python-template"
version = "2024.0.0"
dependencies = [
    "setuptools==75.6.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "flake8== 7.2.0",
]

requires-python = ">=3.12"

authors = [
    { name = "Cristian Augusto", email = "augustocristian@uniovi.es" }
]
maintainers = [
    { name = "Cristian Augusto", email = "augustocristian@uniovi.es" }
]

description = "Python project template"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/augustocristian/samples-python-template"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/augustocristian/samples-python-template"
"Bug Tracker" = "https://github.com/augustocristian/samples-python-template/issues"
Changelog = "https://github.com/augustocristian/samples-python-template/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
addopts = "--cov=sample --cov-report=xml:coverage.xml --cov-branch"
#Configurations related to logging in testing, first
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"